[package]
name = "beam-file"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["headers"] }
http-serde = "2.0"
reqwest = { version = "0.11", features = ["tokio-rustls", "rustls-tls", "stream"], default-features = false }
clap = { version = "4.5.1", features = ["derive", "env"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "signal"] }
once_cell = "1"
beam-lib = { git = "https://github.com/samply/beam", branch = "develop", features = ["http-util", "sockets"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio-util = { version = "0.7.10", features = ["io"] }
futures-util = { version = "0.3.30", default-features = false }
