[workspace]
members = ["beam-file", "beam-file-lib", ]
resolver = "2"

[workspace.dependencies]
tracing-subscriber = "0.3.0"
tracing = "0.1.0"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs", "io-std"] }
once_cell = "1"
reqwest = { version = "0.12", features = ["rustls-tls", "stream"], default-features = false }
beam-lib = { git = "https://github.com/samply/beam", branch = "fix/relative-urls", features = ["http-util", "sockets"] }
beam-file-lib = { workspace = true }