[package]
name = "beam-file-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
beam-lib = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
sync_wrapper = { workspace = true }
tracing = { workspace = true }
futures-util = { workspace = true }
once_cell = { workspace = true }
